force-app/main/default/objects/Bulky_Collections__c/Bulky_Collections__c.object-meta.xml
<CustomObject>
    <description>Holds a list of dates and cases</description>
    <label>Bulky Collection</label>
    <nameField>
        <displayFormat>Bulky-{00000}</displayFormat>
        <label>Bulky Collections Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulky Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>