force-app/main/default/objects/Bulky_Collections__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Case__r.Account.BillingStreet + &quot;, &quot; + Case__r.Account.BillingCity+ &quot;, &quot; +  Case__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>