force-app/main/default/objects/Bulky_Collections__c/fields/Assisted_Collection__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assisted Collection</label>
    <type>Checkbox</type>
</CustomField>