force-app/main/default/objects/Bulky_Collections__c/fields/Bulky_Collection_Slot__c.field-meta.xml
<CustomField>
    <fullName>Bulky_Collection_Slot__c</fullName>
    <label>Bulky Collection Slot</label>
    <referenceTo>Bulky_Collection_Slot__c</referenceTo>
    <relationshipLabel>Bulky Collections</relationshipLabel>
    <relationshipName>Bulky_Collections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>