force-app/main/default/objects/Bulky_Collections__c/fields/Bulky_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Bulky_Item_1__c</fullName>
    <label>Bulky Item 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bulky_Collection_Items</valueSetName>
    </valueSet>
</CustomField>