force-app/main/default/objects/Bulky_Collections__c/fields/Bulky_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Bulky_Item_3__c</fullName>
    <label>Bulky Item 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bulky_Collection_Items</valueSetName>
    </valueSet>
</CustomField>