force-app/main/default/objects/Bulky_Collections__c/fields/Bulky_Item_3_Text__c.field-meta.xml
<CustomField>
    <fullName>Bulky_Item_3_Text__c</fullName>
    <label>Bulky Item 3 Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>