force-app/main/default/objects/Bulky_Collections__c/fields/Bulky_Items_Other__c.field-meta.xml
<CustomField>
    <fullName>Bulky_Items_Other__c</fullName>
    <label>Bulky Items_Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>