force-app/main/default/objects/Bulky_Collections__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bulky Collections</relationshipLabel>
    <relationshipName>Bulky_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>