force-app/main/default/objects/Bulky_Collections__c/fields/Internal_Waste_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Waste_Team_Notes__c</fullName>
    <label>Internal Waste Team Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>