force-app/main/default/objects/Bulky_Collections__c/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <formula>if(ISBLANK(TEXT( Bulky_Item_1__c )),0,1)+if(ISBLANK(TEXT( Bulky_Item_2__c )),0,1)+if(ISBLANK(TEXT( Bulky_Item_3__c )),0,1)+if(ISBLANK(TEXT( Bulky_Item_4__c )),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>