force-app/main/default/objects/Bulky_Collections__c/fields/Where_Items_Left__c.field-meta.xml
<CustomField>
    <fullName>Where_Items_Left__c</fullName>
    <label>Where Items Left</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front of property on pavement</fullName>
            </value>
            <value>
                <fullName>Front Garden</fullName>
            </value>
            <value>
                <fullName>Rear Garden with free access</fullName>
            </value>
            <value>
                <fullName>Rear Garden with gate access</fullName>
            </value>
            <value>
                <fullName>Side Alleyway</fullName>
            </value>
            <value>
                <fullName>On Driveway</fullName>
            </value>
            <value>
                <fullName>Communal Area</fullName>
            </value>
            <value>
                <fullName>Assisted</fullName>
                <label>I need an Assisted Collection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>