force-app/main/default/objects/Bulky_Collections__c/listViews/All_Bulky_Collections.listView-meta.xml
<ListView>
    <fullName>All_Bulky_Collections</fullName>
    <columns>NAME</columns>
    <columns>Bulky_Collection_Slot__c</columns>
    <columns>Number_of_Items__c</columns>
    <columns>Bulky_Item_1__c</columns>
    <columns>Bulky_Item_2__c</columns>
    <columns>Bulky_Item_3__c</columns>
    <columns>Bulky_Item_4__c</columns>
    <columns>Bulky_Items_Other__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bulky Collections</label>
</ListView>